--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     },
     "require-dev": {
         "symfony/http-foundation": "^5.0 || ^6.0",
-        "nyholm/psr7": "^1.4"
+        "nyholm/psr7": "^1.4",
+        "phpstan/phpstan": "^1.8"
     },
     "suggest": {
         "symfony/http-foundation": "The Symfony HttpFoundation component replaces these default PHP global variables and functions by an object-oriented layer.",
