--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,11 @@
             "SBSEDV\\InputConverter\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "SBSEDV\\InputConverter\\Tests\\": "tests/"
+        }
+    },
     "require": {
         "php": ">=8.0",
         "riverline/multipart-parser": "^2.0"
@@ -32,7 +37,8 @@
     "require-dev": {
         "symfony/http-foundation": "^5.0 || ^6.0",
         "nyholm/psr7": "^1.4",
-        "phpstan/phpstan": "^1.8"
+        "phpstan/phpstan": "^1.8",
+        "phpunit/phpunit": "^9.5"
     },
     "suggest": {
         "symfony/http-foundation": "The Symfony HttpFoundation component replaces these default PHP global variables and functions by an object-oriented layer.",
