--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -15,7 +15,7 @@ jobs:
               uses: actions/cache@v3
               with:
                   path: /tmp/composer-cache
-                  key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+                  key: ${{ runner.os }}-${{ hashFiles('**/composer.json') }}
 
             - name: Install Composer packages
               uses: php-actions/composer@v6
