--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 /vendor/
 /composer.lock
-/.phpunit.result.cache
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+###< symfony/phpunit-bridge ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
