--- a/composer.json
+++ b/composer.json
@@ -31,11 +31,11 @@
         }
     },
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.1",
         "riverline/multipart-parser": "^2.0"
     },
     "require-dev": {
-        "symfony/http-foundation": "^5.0 || ^6.0",
+        "symfony/http-foundation": "^6.0",
         "nyholm/psr7": "^1.4",
         "phpstan/phpstan": "^1.8",
         "phpunit/phpunit": "^9.5",
